designed scrollbar for mozilla, fixed a button alignment issue in new task form

--- a/src/components/Categories/Categories.scss
+++ b/src/components/Categories/Categories.scss
@@ -20,21 +20,3 @@
         }
     }
 }
-
-::-webkit-scrollbar-track {
-    background: #181818 !important; 
-    border-radius: 10px;
-  }
-  
-  ::-webkit-scrollbar {
-    width: 10px;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background: #555; 
-    border-radius: 10px;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background: rgb(104, 103, 103); 
-  }
