--- a/src/components/NewTask/NewTask.scss
+++ b/src/components/NewTask/NewTask.scss
@@ -29,40 +29,3 @@
         }
     }
 }
-
-form {
-    display: flex;
-    flex-direction: column;
-
-    input {
-        margin-bottom: 50px;
-        font-size: 16px;
-        padding: 10px 20px;
-        outline: none;
-        background: none;
-        box-shadow: inset 10px 10px 8px #1c1c1d,
-                    inset -4px -4px 8px #3a3d42;
-        border-radius: 25px;
-        color: #fff;
-        border: 2px solid transparent;
-
-        &:focus {
-            border: 2px solid $border-color;
-        }
-    }
-
-    button {
-        width: fit-content;
-        align-self: center;
-        border-color: transparent;
-
-        &:disabled {
-            cursor: not-allowed !important;
-            box-shadow: none;
-            box-shadow: inset 10px 10px 8px #1c1c1d,
-                    inset -4px -4px 8px #3a3d42 !important;
-            color: grey;
-            border-color: transparent;
-        }
-    }
-}
